# Declarative-Programming

./: README.md
0_recursie_lijsten/: ChangeLog.md  README.md  package.yaml  recursie-lijsten.cabal
0_recursie_lijsten/app/: Main.hs
0_recursie_lijsten/dist-newstyle/cache/: config
0_recursie_lijsten/src/: Lib.hs
1_cellulaire_automata/: README.md  cellular-automata.cabal  package.yaml  stack.yaml
1_cellulaire_automata/app/: Main.hs
1_cellulaire_automata/src/: Lib.hs
2_synths_n_parsers/: .gitignore  CHANGELOG.md  LICENSE  README.md  stack.yaml  synth.cabal
2_synths_n_parsers/app/: RTTL.hs  Synth.hs
2_synths_n_parsers/src/: Data.hs  IO.hs  Instruments.hs  Parsers.hs  Types.hs  Util.hs
2_synths_n_parsers/test/: TestInstruments.hs  TestParsers.hs  TestTypes.hs  TestUtil.hs
