cabal-version:       2.0
name:                synth
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/peikos/synth
bug-reports:         https://github.com/peikos/synth/issues
license:             MIT
license-file:        LICENSE
author:              Brian van der Bijl
maintainer:          peikos@peikos.net
copyright:           2020 Brian van der Bijl
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/peikos/synth.git

library
  hs-source-dirs:      src
  exposed-modules:     Types, Util, Data, Parsers, Instruments, IO

  build-depends:       base ^>= 4.12.0.0
                     , process
                     , bytestring
                     , transformers
                     , WAVE
                     , random

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable synth
  hs-source-dirs:      app
  main-is:             Synth.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , process
                     , bytestring
                     , transformers
                     , WAVE
                     , random

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable rttl
  hs-source-dirs:      app
  main-is:             RTTL.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , process
                     , bytestring
                     , transformers
                     , WAVE
                     , random

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite synth-util
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestUtil.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , hspec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeApplications

test-suite synth-types
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestTypes.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , hspec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeApplications

test-suite synth-instruments
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestInstruments.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , hspec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeApplications

test-suite synth-parsers
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestParsers.hs

  build-depends:       base ^>= 4.12.0.0
                     , synth
                     , hspec
                     , transformers

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeApplications
